# houdini_markingmenu

./: .gitignore  README.md  houdini_markingmenu.json  pyproject.toml
python3.10libs/: nodegraphhooks.py
python3.11libs/: nodegraphhooks.py
python3.12libs/: nodegraphhooks.py
python3.13libs/: nodegraphhooks.py
python3.9libs/: nodegraphhooks.py
scripts/python/houdini_markingmenu/: nodegraphhooks.py  qt.py
scripts/python/houdini_markingmenu/core/: __init__.py  collections.py  paths.py
scripts/python/houdini_markingmenu/menus/: menu_prefs.json
scripts/python/houdini_markingmenu/menus/DOP/: DOP_baseCollection.json
scripts/python/houdini_markingmenu/python/: markingmenu.py  menueditor.py  reservedfunctions.py  utils.py
scripts/python/houdini_markingmenu/python/editor_widgets/: detailspane.py  editortaskbar.py  managecollectionstoolbar.py  modifiercomboboxes.py  referenceview.py
scripts/python/houdini_markingmenu/python/editor_widgets/subwidgets/: labelcombobox.py  referencebuttons.py
scripts/python/houdini_markingmenu/python/menu_widgets/: menuitembutton.py  mousepath.py
tests/: test_collections.py  test_utils_compat.py
