[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "houdini-markingmenu"
version = "0.1.0"
description = "Marking menu tools for the Houdini network editor."
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE.md" }
authors = [{ name = "Ahmed Hindy" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<8",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
only-include = [
    "scripts/python",
    "python3.7libs",
    "python3.9libs",
    "python3.10libs",
    "python3.11libs",
    "python3.12libs",
    "python3.13libs",
]
sources = ["scripts/python"]

[tool.pytest.ini_options]
pythonpath = ["scripts/python"]
testpaths = ["tests"]

[tool.ruff]
include = [
    "scripts/python/houdini_markingmenu/core/**/*.py",
    "tests/**/*.py",
]
line-length = 99
src = ["scripts/python", "tests"]
target-version = "py37"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
